chore: updated swaggerdoc
